--- a/ProcessJournal.Rmd
+++ b/ProcessJournal.Rmd
@@ -5,3 +5,5 @@ After thinking about my data and looking at what I was getting, I realized that 
 #### February 25, 2019
 
 Whie I have been extracting the data using the script I made, I realized that there wil be an inherent issue with getting the data from the train to match up with the data from the ferry. How can get a distribution of wait times if I don't have all the data? Luckily, the MTA saves the real-time data for all the train lines since 2014. Pairing this up with the ferry data, I have enough to go back to September 2014... Step one will be to access the historical real-time data [here](http://web.mta.info/developers/MTA-Subway-Time-historical-data.html).
+
+One of the problems arising from this data is that there are very close time interval. For example, the data say that a train arrived at South Ferry at 9:34am, 9:36am, and 9:37am. However, this isn't possible. South Ferry is a terminal station, so any new trains have to wait for a departing train to leave in order to enter. I came across a similar problem when I was pulling from the real-time update. I think this comes about as a side effect of the MTA updating the positions of the trains every 30 seconds. My guess is that the latest time is the most accurate one, on average. So in order to capture the correct data, I will look at the row numbers from the subsetted South Ferry data, and take the row with the highest row number for that time range.
