updated process journal for last week's observations and thoughts

--- a/ProcessJournal.Rmd
+++ b/ProcessJournal.Rmd
@@ -7,3 +7,9 @@ After thinking about my data and looking at what I was getting, I realized that 
 Whie I have been extracting the data using the script I made, I realized that there wil be an inherent issue with getting the data from the train to match up with the data from the ferry. How can get a distribution of wait times if I don't have all the data? Luckily, the MTA saves the real-time data for all the train lines since 2014. Pairing this up with the ferry data, I have enough to go back to September 2014... Step one will be to access the historical real-time data [here](http://web.mta.info/developers/MTA-Subway-Time-historical-data.html).
 
 One of the problems arising from this data is that there are very close time interval. For example, the data say that a train arrived at South Ferry at 9:34am, 9:36am, and 9:37am. However, this isn't possible. South Ferry is a terminal station, so any new trains have to wait for a departing train to leave in order to enter. I came across a similar problem when I was pulling from the real-time update. I think this comes about as a side effect of the MTA updating the positions of the trains every 30 seconds. My guess is that the latest time is the most accurate one, on average. So in order to capture the correct data, I will look at the row numbers from the subsetted South Ferry data, and take the row with the highest row number for that time range.
+
+#### March 4th, 2019
+
+Based on what I was seeing in the preliminary data, I was concerned about some of the time stamps. Some trains  seemed to come in too quick succession. To understand if this is possible and does happen, I spent a good amount of time this past week waiting for a few 1 trains to pass by.  I kept track of the times that trains were arriving, as well as when trains were departing South Ferry. The data doesn't lie! Some trains do arrive in quick auccession of one another. 
+
+Let's get back to the data cleaning. After receiving feedback and taking time to think, I will remove any data that is predicted from each import. I have to build this into my functions and test it out. Logistically, running all of this code may be a bit of a nightmare. There are 78,336 files to pull. Pending my computer holding up, I may subset to a smaller time range. This will also depend on any broken links -- this would stop the process. Luckily, Madison suggested using possibly() from the purrrr package, which allows for functions to run even if they break in certain instances.
