--- a/ProcessJournal.Rmd
+++ b/ProcessJournal.Rmd
@@ -1,3 +1,8 @@
+---
+output: github_document
+---
+
+
 #### February 23, 2019
 
 After thinking about my data and looking at what I was getting, I realized that I will need to stream in a series of data to get the full picture because I won't be able to get all the real-time data. Obtaining all the real time data would require constant retrieval. Instead, I'm going to take samples of the data. I'm reworking my data import and cleaning scripts so that they can automate this process. 
