--- a/ProcessJournal.Rmd
+++ b/ProcessJournal.Rmd
@@ -24,3 +24,5 @@ Let's get back to the data cleaning. After receiving feedback and taking time to
 There has been a few issues with extracting the historical data, but hopefully the current fix will work. I think the reason I was getting the error is that the links were converted to POSIX when I just need to keep them as characters. I've set the code to extract, so hopefully it goes through this time. In the meantime, I may start cleaning the ferry data for the same period.
 
 One hour later... After another break of the fix I was sure would work, I realized what the problem was: some urls just don't return any data! They would break at the selection of each data frame from the lists because there were no data frames to select. I've now added in a fail safe for the extract_historical() and clean_historical() functions. Any link that has no data will instead return a 1 x 7 data frame with NAs. The remove_pred() function doesn't need a fail safe since any rows with NA are considered to be smaller than the given date. The code is currently running. Let's hope this does it! 
+
+A few hours later... The functions are working! However, a new issue has come up. It seems like the GET request times out automatically after 10 seconds. For one of the urls, it couldn't grab the data within 10 seconds, so it broke the whole loop. I've not set a max wait time of 60 seconds; that seems like a reasonable amount of time to connect to the server. After reading some results online, it is possible that this may be happening because of my organization's network (NYU). If I keep getting this error, I may try running it from my home wifi.
