made connections function

--- a/Code/3_Simulations.Rmd
+++ b/Code/3_Simulations.Rmd
@@ -217,49 +217,8 @@ summary(sim1$noise)
 plot(density(sim1$noise), main = "Lateness")
 ```
 
-# Getting wait distributions
+## Create function to extract wait times and connections
 
-## Normal with average delay of 2 minutes
-
-```{r sim norm round1}
-sims <- norm_sims(days = 100, noise_mean = 120, noise_sd = 60, seed = 10314)
-
-# there are 288 scheduled arrivals a day. want to find next ferry, get time difference between train arrival and next ferry
-
-# find the closest ferry
-closest_ferry <- lapply(sims$arrival, FUN = function(x) min(which((ferry_times - x)>0)))
-closest_ferry <- unlist(closest_ferry)
-# add to data frame
-sims$closest_ferry <- closest_ferry
-
-# get ferry time stamp
-ferry_timestamp <- lapply(sims$closest_ferry, FUN = function(x)ferry_times[x])
-ferry_timestamp <- unlist(ferry_timestamp)
-sims$ferry_departure <- ferry_timestamp
-class(sims$ferry_departure) <- c('POSIXt', 'POSIXct')
-
-# get wait times
-sims$wait_time <- as.numeric(sims$ferry_departure - sims$arrival)
-summary(sims$wait_time)
-
-# graph it
-plot(density(sims$wait_time))
-plot(y = sims$wait_time, x = sims$arrival)
-
-# get the scheduled wait times and predicted ferries
-sims$wait_time_predicted <- as.numeric(sims$ferry_departure - sims$schedule)*60
-
-sims$closest_ferry_predicted <- unlist(lapply(sims$schedule, FUN = function(x) min(which((ferry_times - x)>0))))
-
-sims$ferry_predicted <- unlist(lapply(sims$closest_ferry, FUN = function(x)ferry_times[x]))
-
-class(sims$ferry_predicted) <- c('POSIXt', 'POSIXct')
-
-# % different from their actual connections?
-sum(sims$closest_ferry==sims$closest_ferry_predicted)/dim(sims)[1]
-```
-
-## Create this into a function
 
 ```{r}
 get_wait <- function(data){
@@ -291,13 +250,20 @@ return(data)
 }
 ```
 
-Test the function
+# Simulations
+
+## Normal with average delay of 2 minutes
 
 ```{r}
+sims <- norm_sims(days = 100, noise_mean = 120, noise_sd = 60, seed = 10314)
 sims_results <- get_wait(sims)
 
 summary(sims_results$wait_time)
 # % different from their actual connections?
 sum(sims_results$closest_ferry==sims_results$closest_ferry_predicted)/dim(sims_results)[1]
+
+# graph it
+plot(density(sims_results$wait_time))
+plot(y = sims_results$wait_time, x = sims_results$arrival)
 ```
 
