fixed bug and ran second simulation

--- a/Code/3_Simulations.Rmd
+++ b/Code/3_Simulations.Rmd
@@ -139,7 +139,7 @@ for(i in 50:52){
 }
 # every 30 minutes
 diff <- 60*30
-for(i in 53:60){
+for(i in 53:61){
   prev <- i - 1
   ferry_times[i] <- ferry_times[prev] + diff
 }
@@ -265,5 +265,22 @@ sum(sims_results$closest_ferry==sims_results$closest_ferry_predicted)/dim(sims_r
 # graph it
 plot(density(sims_results$wait_time))
 plot(y = sims_results$wait_time, x = sims_results$arrival)
+```
+
+## Normal will average delay off 4 minutes
+
+```{r}
+sims2 <- norm_sims(days = 100, noise_mean = 240, noise_sd = 120, seed = 10314)
+sims_results2 <- get_wait(sims2)
+
+# NOTE: current issue coming from some dates being made that are pushed onto the next day. Solution: added 12:30am ferry for next day so that it'll recognize that time stamp as teh closest
+
+summary(sims_results$wait_time)
+# % different from their actual connections?
+sum(sims_results2$closest_ferry==sims_results2$closest_ferry_predicted)/dim(sims_results2)[1]
+
+# graph it
+plot(density(sims_results2$wait_time))
+plot(y = sims_results2$wait_time, x = sims_results2$arrival)
 ```
 
