added exit time to functions and ran more sims

--- a/Code/3_Simulations.Rmd
+++ b/Code/3_Simulations.Rmd
@@ -150,7 +150,7 @@ class(ferry_times) <- c('POSIXt', 'POSIXct')
 ## Normal noise
 
 ```{r normal noise function}
-norm_sims <- function(days,noise_mean, noise_sd, seed){
+norm_sims <- function(days,noise_mean, noise_sd, seed, exit_time){
   # Initiate data frame
   data <- NULL
   # Create timestamps for given # of days
@@ -165,7 +165,7 @@ norm_sims <- function(days,noise_mean, noise_sd, seed){
   data$noise <- round(data$noise,0)
   
   # Create updated arrival time
-  data$arrival <- data$schedule + data$noise
+  data$arrival <- data$schedule + data$noise + exit_time
   
   # return the data
   return(as.data.frame(data))
@@ -175,7 +175,7 @@ norm_sims <- function(days,noise_mean, noise_sd, seed){
 Test with 100 days
 
 ```{r}
-sim1 <- norm_sims(days = 100, noise_mean = 65, noise_sd = 30, seed = 10314)
+sim1 <- norm_sims(days = 100, noise_mean = 65, noise_sd = 30, seed = 10314, exit_time = 0)
 
 summary(sim1$noise)
 plot(density(sim1$noise), main = "Lateness")
@@ -184,7 +184,7 @@ plot(density(sim1$noise), main = "Lateness")
 ## Beta function
 
 ```{r}
-beta_sims <- function(days,noise_beta, noise_alpha, seed){
+beta_sims <- function(days,noise_beta, noise_alpha, seed, exit_time){
   # Initiate data frame
   data <- NULL
   # Create timestamps for given # of days
@@ -201,7 +201,7 @@ beta_sims <- function(days,noise_beta, noise_alpha, seed){
   data$noise <- round(data$noise,0)
 
   # Create updated arrival time
-  data$arrival <- data$schedule + data$noise
+  data$arrival <- data$schedule + data$noise + exit_time
   
   # return the data
   return(as.data.frame(data))
@@ -211,7 +211,7 @@ beta_sims <- function(days,noise_beta, noise_alpha, seed){
 Test with 100 days
 
 ```{r}
-sim1 <- beta_sims(days = 100, noise_beta = 120, noise_alpha = 30, seed = 10314)
+sim1 <- beta_sims(days = 100, noise_beta = 120, noise_alpha = 30, seed = 10314, exit_time = 0)
 
 summary(sim1$noise)
 plot(density(sim1$noise), main = "Lateness")
@@ -262,7 +262,7 @@ return(data)
 ## Normal with average delay of 2 minutes
 
 ```{r}
-sims <- norm_sims(days = 100, noise_mean = 120, noise_sd = 60, seed = 10314)
+sims <- norm_sims(days = 100, noise_mean = 120, noise_sd = 60, seed = 10314, exit_time = 0)
 sims_results <- get_wait(sims)
 
 summary(sims_results$wait_time)
@@ -270,14 +270,14 @@ summary(sims_results$wait_time)
 sum(sims_results$closest_ferry==sims_results$closest_ferry_predicted)/dim(sims_results)[1]
 
 # graph it
-plot(density(sims_results$wait_time))
-plot(y = sims_results$wait_time, x = sims_results$arrival)
+plot(density(sims_results$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results$wait_time, x = sims_results$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
 ```
 
 ## Normal with average delay of 4 minutes
 
 ```{r}
-sims2 <- norm_sims(days = 100, noise_mean = 240, noise_sd = 120, seed = 10314)
+sims2 <- norm_sims(days = 100, noise_mean = 240, noise_sd = 120, seed = 10314, exit_time = 0)
 sims_results2 <- get_wait(sims2)
 
 # NOTE: current issue coming from some dates being made that are pushed onto the next day. Solution: added 12:30am ferry for next day so that it'll recognize that time stamp as teh closest
@@ -287,14 +287,14 @@ summary(sims_results2$wait_time)
 sum(sims_results2$closest_ferry==sims_results2$closest_ferry_predicted)/dim(sims_results2)[1]
 
 # graph it
-plot(density(sims_results2$wait_time))
-plot(y = sims_results2$wait_time, x = sims_results2$arrival)
+plot(density(sims_results2$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results2$wait_time, x = sims_results2$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
 ```
 
 ## Beta with beta delay of 2 minutes
 
 ```{r}
-sims3 <- beta_sims(days = 100, noise_beta = 120, noise_alpha = 30, seed = 10314)
+sims3 <- beta_sims(days = 100, noise_beta = 120, noise_alpha = 30, seed = 10314, exit_time = 0)
 sims_results3 <- get_wait(sims3)
 
 summary(sims_results3$wait_time)
@@ -302,7 +302,55 @@ summary(sims_results3$wait_time)
 sum(sims_results3$closest_ferry==sims_results3$closest_ferry_predicted)/dim(sims_results3)[1]
 
 # graph it
-plot(density(sims_results3$wait_time))
-plot(y = sims_results3$wait_time, x = sims_results3$arrival)
+plot(density(sims_results3$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results3$wait_time, x = sims_results3$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
 ```
 
+## Normal with average delay of 2 minutes + 2 minutes to exit station
+
+```{r}
+sims4 <- norm_sims(days = 100, noise_mean = 120, noise_sd = 60, seed = 10314, exit_time = 120)
+sims_results4 <- get_wait(sims4)
+
+summary(sims_results4$wait_time)
+# % different from their actual connections?
+sum(sims_results4$closest_ferry==sims_results4$closest_ferry_predicted)/dim(sims_results4)[1]
+
+# graph it
+plot(density(sims_results4$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results4$wait_time, x = sims_results4$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
+```
+
+## Normal with average delay of 4 minutes + 2 minutes to exit the station
+
+```{r}
+sims5 <- norm_sims(days = 100, noise_mean = 240, noise_sd = 120, seed = 10314, exit_time = 120)
+# add the 2 minutes to exit station
+sims5$arrival <- sims5$arrival + 120
+sims_results5 <- get_wait(sims5)
+
+summary(sims_results5$wait_time)
+# % different from their actual connections?
+sum(sims_results5$closest_ferry==sims_results5$closest_ferry_predicted)/dim(sims_results5)[1]
+
+# graph it
+plot(density(sims_results5$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results5$wait_time, x = sims_results5$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
+```
+
+## Beta with beta delay of 2 minutes + 2 minutes to exit station
+
+```{r}
+sims6 <- beta_sims(days = 100, noise_beta = 120, noise_alpha = 30, seed = 10314, exit_time = 120)
+# add the 2 minutes to exit station
+sims6$arrival <- sims6$arrival + 120
+sims_results6 <- get_wait(sims6)
+
+summary(sims_results6$wait_time)
+# % different from their actual connections?
+sum(sims_results6$closest_ferry==sims_results6$closest_ferry_predicted)/dim(sims_results6)[1]
+
+# graph it
+plot(density(sims_results6$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results6$wait_time, x = sims_results6$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
+```
