--- a/Code/3_Simulations.Rmd
+++ b/Code/3_Simulations.Rmd
@@ -267,7 +267,7 @@ sims_results <- get_wait(sims)
 
 summary(sims_results$wait_time)
 # % different from their actual connections?
-paste("Percentage of connections that are unchanged due to delay",sum(sims_results$closest_ferry==sims_results$closest_ferry_predicted)/dim(sims_results)[1])
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results$closest_ferry==sims_results$closest_ferry_predicted)/dim(sims_results)[1])
 
 # graph it
 plot(density(sims_results$wait_time), main = "Density Plot of Wait Times")
@@ -280,11 +280,11 @@ plot(y = sims_results$wait_time, x = sims_results$arrival, main = "", xlab = "Ar
 sims2 <- norm_sims(days = 100, noise_mean = 240, noise_sd = 120, seed = 10314, exit_time = 0)
 sims_results2 <- get_wait(sims2)
 
-# NOTE: current issue coming from some dates being made that are pushed onto the next day. Solution: added 12:30am ferry for next day so that it'll recognize that time stamp as teh closest
+# NOTE: current issue coming from some dates being made that are pushed onto the next day. Solution: added 12:30am ferry for next day so that it'll recognize that time stamp as the closest
 
 summary(sims_results2$wait_time)
 # % different from their actual connections?
-paste("Percentage of connections that are unchanged due to delay",sum(sims_results2$closest_ferry==sims_results2$closest_ferry_predicted)/dim(sims_results2)[1])
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results2$closest_ferry==sims_results2$closest_ferry_predicted)/dim(sims_results2)[1])
 
 # graph it
 plot(density(sims_results2$wait_time), main = "Density Plot of Wait Times")
@@ -299,7 +299,7 @@ sims_results3 <- get_wait(sims3)
 
 summary(sims_results3$wait_time)
 # % different from their actual connections?
-paste("Percentage of connections that are unchanged due to delay",sum(sims_results3$closest_ferry==sims_results3$closest_ferry_predicted)/dim(sims_results3)[1])
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results3$closest_ferry==sims_results3$closest_ferry_predicted)/dim(sims_results3)[1])
 
 # graph it
 plot(density(sims_results3$wait_time), main = "Density Plot of Wait Times")
@@ -314,7 +314,7 @@ sims_results4 <- get_wait(sims4)
 
 summary(sims_results4$wait_time)
 # % different from their actual connections?
-paste("Percentage of connections that are unchanged due to delay",sum(sims_results4$closest_ferry==sims_results4$closest_ferry_predicted)/dim(sims_results4)[1])
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results4$closest_ferry==sims_results4$closest_ferry_predicted)/dim(sims_results4)[1])
 
 # graph it
 plot(density(sims_results4$wait_time), main = "Density Plot of Wait Times")
@@ -331,7 +331,7 @@ sims_results5 <- get_wait(sims5)
 
 summary(sims_results5$wait_time)
 # % different from their actual connections?
-paste("Percentage of connections that are unchanged due to delay",sum(sims_results5$closest_ferry==sims_results5$closest_ferry_predicted)/dim(sims_results5)[1])
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results5$closest_ferry==sims_results5$closest_ferry_predicted)/dim(sims_results5)[1])
 
 # graph it
 plot(density(sims_results5$wait_time), main = "Density Plot of Wait Times")
@@ -348,10 +348,39 @@ sims_results6 <- get_wait(sims6)
 
 summary(sims_results6$wait_time)
 # % different from their actual connections?
-paste("Percentage of connections that are unchanged due to delay",sum(sims_results6$closest_ferry==sims_results6$closest_ferry_predicted)/dim(sims_results6)[1])
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results6$closest_ferry==sims_results6$closest_ferry_predicted)/dim(sims_results6)[1])
 
 # graph it
 plot(density(sims_results6$wait_time), main = "Density Plot of Wait Times")
 plot(y = sims_results6$wait_time, x = sims_results6$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
 ```
 
+## Normal with average delay of 2 minutes + 2 minutes to exit station (200 days)
+
+```{r norm sim 7 with delay 200 days}
+sims7 <- norm_sims(days = 200, noise_mean = 120, noise_sd = 60, seed = 10314, exit_time = 120)
+sims_results7 <- get_wait(sims7)
+
+summary(sims_results7$wait_time)
+# % different from their actual connections?
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results7$closest_ferry==sims_results7$closest_ferry_predicted)/dim(sims_results7)[1])
+
+# graph it
+plot(density(sims_results7$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results7$wait_time, x = sims_results7$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
+```
+
+## Normal with average delay of 4 minutes + 2 minutes to exit station (200 days)
+
+```{r norm sim 8 with delay 200 days}
+sims8 <- norm_sims(days = 200, noise_mean = 240, noise_sd = 60, seed = 10314, exit_time = 120)
+sims_results8 <- get_wait(sims8)
+
+summary(sims_results8$wait_time)
+# % different from their actual connections?
+paste("Proportion of connections that are unchanged due to delay",sum(sims_results8$closest_ferry==sims_results8$closest_ferry_predicted)/dim(sims_results8)[1])
+
+# graph it
+plot(density(sims_results8$wait_time), main = "Density Plot of Wait Times")
+plot(y = sims_results8$wait_time, x = sims_results8$arrival, main = "", xlab = "Arrival Time", ylab = "Wait Time")
+```
